feat: creating header

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,4 +2,29 @@
 @import "~bootstrap/scss/bootstrap";
 
 // importo file reset.scss
-@import "_partials/reset.scss";
+@import "_partials/variables.scss";
+
+//scss
+.ec-nav-link {
+    color: $text-color;
+    border-bottom: 3px solid $white;
+    padding: 40px 0;
+
+    &:hover {
+        color: $primary-color;
+        
+        border-bottom: 3px solid $primary-color;
+    }
+}
+
+#top-nav {
+    background-color: $primary-color;
+    #info {
+        text-align: end;
+        a {
+            all:unset;
+            color: $white;
+            cursor: pointer;
+        }
+    }
+}
