--- a/resources/scss/_partials/common.scss
+++ b/resources/scss/_partials/common.scss
@@ -1,7 +1,7 @@
 /******************************************
-utilities
+common
 *******************************************/
-
+  
 .text-primary {
     color: $primary-color;
 }
