--- a/resources/scss/_partials/typography.scss
+++ b/resources/scss/_partials/typography.scss
@@ -1,5 +1,7 @@
+// immportazione font form npm 
 @import "@fontsource/open-sans/600.css" ;
 
+// dichiarazione font per il body 
 body {
     font-family: "Open Sans";
 }
