--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,7 +1,7 @@
 // css di bootstrap
 @import "~bootstrap/scss/bootstrap";
 
-// importo file variables.scss
+// importo file partials.scss
 @import "_partials/variables.scss";
 @import "_partials/common.scss";
 @import "_partials/typography.scss";
